# AON

./: -out  .env  .gitattributes  .gitignore  CODE_OF_CONDUCT  Contributing_Castellano  Contributing_English  GOBERNANZA_DESCENTRALIZADA_DAO  Informe metodologia IEEE  Licence_English  Pich_French  Pitch_Castellano.md  Pitch_English.md  README.md  REDMI  REDMI_English_Spain_French  Readmi  SECURITY  SimpleHttpsServer.java  Tokenomics  Tokenomics_Castellano  Tokenomics_English  Tokenomics_French  WhitePapar_Castellano  WhitePaper_English  WhitePaper_Inglish  aeon-server.sh  api_gpt4all.py  app.cjs  app.js  certificate.crt  chat.ejs  client_terminal.py  convert-all-to-esm.js  database.js  diagnostico.sh  diagnostico_con_solucion.sh  diagnostico_resumido.sh  gpt-supervisor  gpt-supervisor.cjs  (+51 more)
aeon/: app.js  package-lock.json  package.json
aon_token/: AonToken.sol  hardhat.config.js  package-lock.json
backend/: server.js
certs/: certificate.crt  package-lock.json  package.json  server.crt
frontend/: index.html  server.js
https-server/: mini_https_server  mini_https_server.cpp  run_https_server.sh  server  server.cpp
logo_files/: animations.js  base.css  cart-notification.js  chunk.common_07akgxkB.esm.js  chunk.modal_BimtL6Xh.esm.js  client.shop-follow-button_BZP8esyV.en.esm.js  component-accordion.css  component-card.css  (+47 more)
my-decentralized-ai/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  create_project.sh  ocr.py  package-lock.json  package.json  server.js
my-decentralized-ai/include/: module.h  network.h
my-decentralized-ai/public/: index.html  script.js
my-decentralized-ai/src/: main.c  module.c  network.c
p2pcoin_node/: Cargo.toml  check_aeon.sh  config.json  db.sqlite  package-lock.json  package.json  server.js
p2pcoin_node/src/: lib.rs  main.rs
p2pcoin_node/src/identity/: key_generator.rs  key_store.rs  mod.rs  peer_id_manager.rs  recovery.rs
p2pcoin_node/src/network/: mod.rs
token_crypto/: Cargo.toml
token_crypto/src/: main.rs
(+56 files in other folders)
