# Cargo.toml

[package]
name = "p2pcoin_node"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.46", features = ["tcp-tokio", "noise", "yamux", "identify"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"

tokio-stream = { version = "0.1", features = ["io-util"] }

sodiumoxide = "0.2"
sha2 = "0.10"
rand = "0.8"
bip39 = "2.0"

# ¡SURREALDB CON LA CARACTERÍSTICA KV-ROCKSDB ACTIVADA!
surrealdb = { version = "1.0.0-beta.10", features = ["kv-rocksdb"] }
env_logger = "0.10"
